--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.19.2",
     "happy-dom": "^9.20.3",
     "howler": "^2.2.4",
+    "matter-js": "^0.20.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
